# flow-rl

./: .gitignore  CLAUDE.md  LLM_CONFIGURATION.md  LLM_CONFIGURATION_CHANGELOG.md  PARALLEL_SKILLS_PLAN.md  PARALLEL_TRAINING_FINAL_SUMMARY.md  PARALLEL_TRAINING_IMPLEMENTATION_SUMMARY.md  PARALLEL_TRAINING_QUICKSTART.md  PHASE_3_ARCHITECTURE_REVIEW.md  PHASE_3_PARALLEL_TRAINING_PLAN.md  SCALAR_IMPLEMENTATION_IMPROVEMENTS.md  SCALAR_Method_Implementation_Summary.md  analyze_ladder_positions.py  checkpointing_plan.md  compare_compile_times.py  debug_relative.py  extract_trajectory_data.py  generate_plots_ablations_200M.py  generate_videos.py  integration_analysis.md  meta_controller_plan.md  package-lock.json  package.json  process_craftax_manual.py  process_knowledgebase.py  pyproject.toml  render_trajectory_video.py  requirements.txt  simulate_ore_counts.py  test_evaluation.py  test_fabrax_shapes.py  test_frontier_integration.py  test_knowledge_base.py  test_prompts.py  test_renderer.py  trajectory_analysis_parallel_plan.md  verify_knowledgebase.py
flowrl/: __init__.py  bottomup.py  bottomup_parallel.py  ppo.py  ppo_flow.py  ppo_flow_fast.py  ppo_flow_txrl.py  ppo_flow_w_reset.py  ppo_modified.py  ppo_rnd.py  ppo_rnn.py  skill_dependency_resolver.py  skill_dependency_resolver_old.py  skill_dependency_resolver_unified.py  skill_depenency_resolver_new.py
knowledge_base_processing/: README.md  add_prerequisites_craftax_kb.py  generate_code_craftax_kb.py  process_craftax_classic_kb.py  process_craftax_kb.py  process_craftax_kb_from_tutorial.py  process_fabrax_kb.py  (+3 more)
(+121 files in other folders)
